Lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: front
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
